fix nav links on mobile

--- a/apps/docs/pages/globals.css
+++ b/apps/docs/pages/globals.css
@@ -257,6 +257,10 @@ body:before {
   @media screen and (min-width: 640px) {
     align-items: center;
     flex-direction: row;
+
+    a {
+      flex-basis: 50%;
+    }
   }
 
   /* nav links container */
@@ -264,12 +268,12 @@ body:before {
     border-color: var(--ax-colors-border-tertiary);
     border-radius: var(--ax-borderRadius-md);
     border-width: 1px;
-    flex-basis: 50%;
     flex-wrap: wrap;
     gap: 0 0.5rem;
     margin: 0;
     max-width: none;
     padding: 1rem;
+    width: 100%;
 
     &::before {
       color: var(--ax-colors-fg-tertiary);
